--- a/ChatApp_Backend/package.json
+++ b/ChatApp_Backend/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.7",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.1",
@@ -25,6 +26,9 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@socket.io/redis-adapter": "^8.3.0",
+    "@socket.io/redis-emitter": "^5.1.0",
+    "amqplib": "^0.10.8",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.1",
     "cookie-parser": "^1.4.7",
@@ -36,6 +40,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.0",
     "pg": "^8.14.1",
+    "redis": "^4.7.1",
     "reflect-metadata": "^0.2.2",
     "socket.io": "^4.8.1",
     "typeorm": "^0.3.22"
